--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swc-leaflet",
+  "name": "swc-leaflet-playground",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.tsx",
@@ -10,8 +10,8 @@
     "start": "concurrently \"webpack-dev-server\" \"tsc -w --noEmit --pretty\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Forum One",
+  "license": "",
   "devDependencies": {
     "@swc/cli": "^0.1.55",
     "@swc/core": "^1.2.123",
