--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
     "prettier": "^2.5.1",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "react-leaflet": "^3.2.2",
     "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
