--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "ES5", "ES2015", "ES2016", "ES2017"],
+    "target": "ES2017",
+    "module": "commonjs",
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "esModuleInterop": true,
     "strict": true,
     "types": ["react/next", "react-dom/next"]
   },
-  "exclude": ["node_modules"]
 }
